// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkButtonLink should render correctly 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should render correctly with iconAlignment="leading" 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
        Object {
          "flexDirection": "row-reverse",
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
            Object {
              "marginLeft": 0,
              "marginRight": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should render correctly with iconAlignment="trailing" 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should render correctly with text props provided 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      allowFontScaling={false}
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should render correctly with theme prop 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
            Object {
              "color": "red",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should support elements as icons 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 16,
            "fontWeight": "400",
            "letterSpacing": -0.2,
          },
          Object {},
        ]
      }
    >
      foo
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should support overwriting styles 1`] = `
<View
  style={
    Object {
      "width": 4,
    }
  }
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should support the "disabled" property 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
            Object {
              "color": "rgb(178, 174, 189)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;

exports[`Android BpkButtonLink should support the "icon" property 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackgroundBorderless",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Object {
            "fontSize": 16,
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
              "marginLeft": 4,
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`Android should support "borderlessBackground" equal to false 1`] = `
<View
  style={null}
>
  <View
    accessibilityLabel="Lorem ipsum"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "attribute": "selectableItemBackground",
        "type": "ThemeAttrAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "center",
          "minHeight": 32,
        },
      ]
    }
  >
    <Text
      numberOfLines={1}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "sans-serif",
            "fontSize": 14,
            "fontWeight": "400",
            "letterSpacing": 0,
          },
          Object {
            "fontFamily": "sans-serif-medium",
          },
          Array [
            Object {
              "color": "rgb(0, 178, 214)",
            },
          ],
        ]
      }
    >
      LOREM IPSUM
    </Text>
  </View>
</View>
`;
